--- a/01-minesweeper/src/style.css
+++ b/01-minesweeper/src/style.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #292839;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,7 +13,33 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
+body {
+  margin: 0;
+  padding: 0;
+  display: grid;
+  place-items: center;
+  height: 100vh;
+}
+
+#app {
+  position: relative;
+  /* border: 2px solid red; */
+}
+
+canvas {
+  position: absolute;
+}
+#ui-layer {
+  z-index: 3;
+}
+#game-layer {
+  z-index: 2;
+}
+#background-layer {
+  z-index: 1;
+}
+
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
@@ -93,4 +119,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
