--- a/01-minesweeper/src/style.css
+++ b/01-minesweeper/src/style.css
@@ -17,107 +17,76 @@
 body {
   margin: 0;
   padding: 0;
-  display: grid;
+  /* display: grid;
   place-items: center;
   height: 100vh;
+  width: 100%;
+  grid-template-areas: 
+    "head head head head head"
+    "nav main main main main";
+  grid-template-rows: 50px 1fr; */
 }
 
 #app {
-  position: relative;
-  /* border: 2px solid red; */
+  /* position: relative; */
+  display: grid;
+  /* place-items: center; */
+  height: 100vh;
+  width: 100%;
+  grid-template-areas: 
+    "head head head head head"
+    "nav main main main main";
+  grid-template-rows: 50px 1fr;
+  /* gap: 10px; */
+  /* grid-template-columns: 250px 1fr; */
 }
 
-canvas {
+/* canvas {
   position: absolute;
-}
+} */
 #ui-layer {
   z-index: 3;
 }
 #game-layer {
   z-index: 2;
 }
-#background-layer {
-  z-index: 1;
+
+/* #page > header { */
+#app header {
+  grid-area: head;
+  background-color: #5D6187;
 }
 
-/* a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
+/* #page > nav { */
+#app nav {
+  grid-area: nav;
+  place-content: center;
+  /* text-align: center; */
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  background-color: #1d1a3243;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+/* #page > main { */
+#app main {
+  grid-area: main;
+  place-content: center;
   text-align: center;
+  /* background-color: #ffff64; */
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+#app nav .mine-info {
+  width: 80px;
+  border-radius: 10px;
+  border: 1px solid #8cffa0;
+  padding: 0 5px;
+  /* background-color: #33b5e5; */
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #3178c6aa);
-}
-
-.card {
-  padding: 2em;
+#app nav .mine-info .flag-count {
+  font-size: 1.5rem;
+  color: #8cffa0;
 }
 
-.read-the-docs {
-  color: #888;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+/* #page > footer {
+  grid-area: foot;
+  background-color: #8cffa0;
 } */
