--- a/01-minesweeper/src/style.css
+++ b/01-minesweeper/src/style.css
@@ -17,33 +17,18 @@
 body {
   margin: 0;
   padding: 0;
-  /* display: grid;
-  place-items: center;
-  height: 100vh;
-  width: 100%;
-  grid-template-areas: 
-    "head head head head head"
-    "nav main main main main";
-  grid-template-rows: 50px 1fr; */
 }
 
 #app {
-  /* position: relative; */
   display: grid;
-  /* place-items: center; */
   height: 100vh;
   width: 100%;
   grid-template-areas: 
     "head head head head head"
     "nav main main main main";
   grid-template-rows: 50px 1fr;
-  /* gap: 10px; */
-  /* grid-template-columns: 250px 1fr; */
 }
 
-/* canvas {
-  position: absolute;
-} */
 #ui-layer {
   z-index: 3;
 }
@@ -51,42 +36,35 @@ body {
   z-index: 2;
 }
 
-/* #page > header { */
 #app header {
   grid-area: head;
   background-color: #5D6187;
 }
 
-/* #page > nav { */
 #app nav {
   grid-area: nav;
   place-content: center;
-  /* text-align: center; */
   place-items: center;
   background-color: #1d1a3243;
 }
 
-/* #page > main { */
 #app main {
   grid-area: main;
   place-content: center;
   text-align: center;
-  /* background-color: #ffff64; */
 }
 
+#app nav .emoji {
+  font-size: 3rem;
+}
 #app nav .mine-info {
   width: 80px;
   border-radius: 10px;
   border: 1px solid #8cffa0;
   padding: 0 5px;
-  /* background-color: #33b5e5; */
+  margin: 2rem 0;
 }
 #app nav .mine-info .flag-count {
   font-size: 1.5rem;
   color: #8cffa0;
 }
-
-/* #page > footer {
-  grid-area: foot;
-  background-color: #8cffa0;
-} */
