--- a/01-minesweeper/src/style.css
+++ b/01-minesweeper/src/style.css
@@ -46,6 +46,7 @@ body {
   place-content: center;
   place-items: center;
   background-color: #1d1a3243;
+  /* background-color: rgba(0,0,0,0.4); */
 }
 
 #app main {
