--- a/02-minesweeper-v2/src/style.css
+++ b/02-minesweeper-v2/src/style.css
@@ -1,96 +1,70 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background: #292839;
+  color: #ffffffde;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-#app {
-  max-width: 1280px;
+#board {
+  color: #000;
+  width: 400px;
+  height: 400px;
+  /* border: 2px solid #333; */
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #3178c6aa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.cell {
+  border-radius: 3px;
+  /* border: 1px solid #ccc; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: system-ui;
+  font-weight: 600;
+  /* font-size: 1.2rem; */
+  user-select: none;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  padding: 0;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.8);
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.cell.covered {
+  /* background-color: #5AA6F7;
+  background-color: #7BD5FF; */
+  background: radial-gradient(#7BD5FF, #5AA6F7 80%);
+  box-shadow: 
+    /* inset 0 0 8px 1px rgba(0, 0, 0, 0.967), */
+    /* 0 0 0 0.05px rgba(0, 0, 0, 0.2), */
+    0.3em 0.3em 1em rgba(0, 0, 100, 0.8);
+  
 }
+
+.cell.flagged {
+  background-color: #F7D237;
+}
+
+.cell.questioned {
+  background-color: #91C952;
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: #427518;
+}
+
+.cell.mine {
+  background-color: red;
+}
+
+.cell.number {
+  /* background-color: #d1d8e0; */
+  font-size: 1.5rem;
+}
+
+#board.victory > .cell.mine,
+.cell.number,
+.cell.empty {
+  background-color: #fff;
+  box-shadow: 
+    inset 0 0 4px 1px rgba(0, 0, 0, 0.967),
+    /* 0 0 0 0.05px rgba(0, 0, 0, 0.5), */
+    0.3em 0.3em 1em rgba(0, 0, 100, 0.8);
+}
+
