--- a/02-minesweeper-v2/src/style.css
+++ b/02-minesweeper-v2/src/style.css
@@ -1,70 +1,68 @@
+:root {
+  --border-radius: 5px; 
+  --fontSize: 20px;
+}
+
+html {
+  font-size: var(--fontSize);
+}
+
 body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   background: #292839;
   color: #ffffffde;
+  
 }
 
 #board {
   color: #000;
-  width: 400px;
-  height: 400px;
-  /* border: 2px solid #333; */
   margin: 0 auto;
+  min-width: 50%;
+  max-height: 100vh;
 }
 
 .cell {
-  border-radius: 3px;
-  /* border: 1px solid #ccc; */
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: system-ui;
-  font-weight: 600;
-  /* font-size: 1.2rem; */
+  font-family: sans-serif;
+  font-size: 1rem;
+  font-weight: bold;
   user-select: none;
   cursor: pointer;
-  padding: 0;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.8);
+  text-shadow: 0 0.04rem 0.07rem rgba(0, 0, 0, 0.9);
+  border-radius: var(--border-radius);
+  border: 0.05rem solid #292839;
+  box-shadow: 
+    inset 0 0 0.05rem 0.02rem rgba(0,0,0, 0.99),
+    0.3em 0.3em 1em rgba(0, 0, 100, 0.8);
+  transition: box-shadow 0.2s, background 0.2s;
 }
 
 .cell.covered {
-  /* background-color: #5AA6F7;
-  background-color: #7BD5FF; */
   background: radial-gradient(#7BD5FF, #5AA6F7 80%);
-  box-shadow: 
-    /* inset 0 0 8px 1px rgba(0, 0, 0, 0.967), */
-    /* 0 0 0 0.05px rgba(0, 0, 0, 0.2), */
-    0.3em 0.3em 1em rgba(0, 0, 100, 0.8);
-  
 }
 
 .cell.flagged {
-  background-color: #F7D237;
+  background: radial-gradient(#ffe062, #F7D237 80%);
 }
 
 .cell.questioned {
-  background-color: #91C952;
-  font-size: 1.5rem;
-  font-weight: 700;
-  color: #427518;
+  background: radial-gradient(#a0db5d, #91C952 70%);
+  color: #5E9C25;
 }
 
 .cell.mine {
   background-color: red;
 }
 
-.cell.number {
-  /* background-color: #d1d8e0; */
-  font-size: 1.5rem;
-}
-
 #board.victory > .cell.mine,
 .cell.number,
 .cell.empty {
-  background-color: #fff;
-  box-shadow: 
-    inset 0 0 4px 1px rgba(0, 0, 0, 0.967),
-    /* 0 0 0 0.05px rgba(0, 0, 0, 0.5), */
-    0.3em 0.3em 1em rgba(0, 0, 100, 0.8);
+  background: #fff;
+  box-shadow:
+    inset 0 0 0.15rem 0.045rem rgba(0,0,0, 0.99),
+    0.3rem 0.3rem 1rem rgba(0, 0, 100, 0.8);
 }
+
 
